5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3135/executions/1808_2577.log
== TEST (2019-06-13 13:29:20) 
-- CODE:
a=input("Insira sua frase")
b="AaEeIiOoUu"
for i in range(size(a))
	n=n.replace(b[i],"")
print(n)
-- ERROR:
File "XXXX", line 3
    for i in range(size(a))
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 13:29:26) 
-- CODE:
a=input("Insira sua frase")
b="AaEeIiOoUu"
for i in range(size(a)):
	n=n.replace(b[i],"")
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    for i in range(size(a)):
NameError: name 'size' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 13:29:42) 
-- CODE:
a=input("Insira sua frase")
b="AaEeIiOoUu"
for i in range(0,(a)):
	n=n.replace(b[i],"")
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    for i in range(0,(a)):
TypeError: 'str' object cannot be interpreted as an integer
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 13:30:03) 
-- CODE:
a=input("Insira sua frase")
b="AaEeIiOoUu"
for i in range(0,len(b)):
	n=n.replace(b[i],"")
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    n=n.replace(b[i],"")
NameError: name 'n' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 13:30:24) 
-- CODE:
a=input("Insira sua frase")
b="AaEeIiOoUu"
for i in range(0,len(b)):
	a=a.replace(b[i],"")
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(n)
NameError: name 'n' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 13:30:33) 
-- CODE:
a=input("Insira sua frase")
b="AaEeIiOoUu"
for i in range(0,len(b)):
	a=a.replace(b[i],"")
print(a
-- ERROR:
File "XXXX", line 6
    
           ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 13:30:38) 
-- CODE:
a=input("Insira sua frase")
b="AaEeIiOoUu"
for i in range(0,len(b)):
	a=a.replace(b[i],"")
print(a)
-- OUTPUT:
vc_pd_vr_q
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 13:30:43) 
-- CODE:
a=input("Insira sua frase")
b="AaEeIiOoUu"
for i in range(0,len(b)):
	a=a.replace(b[i],"")
print(a)
-- OUTPUT:
vc_pd_vr_q
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 13:30:45) 
-- CODE:
a=input("Insira sua frase")
b="AaEeIiOoUu"
for i in range(0,len(b)):
	a=a.replace(b[i],"")
print(a)
-- EXECUTION TIME:
0.932489
-- TEST CASE 1:
---- input:
voce_pode_vir_aqui
---- correct output:
vc_pd_vr_q
---- user output:
vc_pd_vr_q
-- TEST CASE 2:
---- input:
com
---- correct output:
cm
---- user output:
cm
-- TEST CASE 3:
---- input:
tudo
---- correct output:
td
---- user output:
vc_pd_vr_q
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 13:30:46) 
-- CODE:
a=input("Insira sua frase")
b="AaEeIiOoUu"
for i in range(0,len(b)):
	a=a.replace(b[i],"")
print(a)
-- EXECUTION TIME:
1.01847
-- TEST CASE 1:
---- input:
voce_pode_vir_aqui
---- correct output:
vc_pd_vr_q
---- user output:
vc_pd_vr_q
-- TEST CASE 2:
---- input:
com
---- correct output:
cm
---- user output:
cm
-- TEST CASE 3:
---- input:
tudo
---- correct output:
td
---- user output:
td
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
